--- a/movieDetails.css
+++ b/movieDetails.css
@@ -1,16 +1,16 @@
 body {
     background-color: rgb(43, 48, 53) !important;
 }
+/* Movie Details Card Container */
 .container {
     height: 100vh;
     width: 100%;
-    /* background-color: bisque; */
     display: flex !important;
     align-items: center;
     justify-content: center;
-    /* background-color: black; */
 }
 
+/* Spinner Styling */
 .spinner {
     width: 30px !important; 
     height: 30px !important; 
@@ -18,6 +18,7 @@ body {
     display: block;
 }
 
+/* Movie Details Card */
 .movieCard {
     background-color: white;
     width: 800px;
@@ -25,7 +26,6 @@ body {
     height: fit-content;
     display: flex;
     flex-wrap: wrap;
-    /* background-color: blueviolet; */
     box-shadow: 0 0 10px rgb(245, 242, 242);
     transition: scale .2s ease-in-out;
 }
@@ -34,22 +34,23 @@ body {
     scale: 102%;
 }
 
+/* Movie Image Container*/
 #movieImage-container {
     width: 50%;
-    background: url('https://images.pexels.com/photos/733853/pexels-photo-733853.jpeg?auto=compress&cs=tinysrgb&w=600');
+    background: url('images/no-image-found.jpeg');
     background-position: center;
     background-size: cover;
 }
+/* Movie Data Container*/
 .movieData-container {
     width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 20px;
-    /* background-color: rgb(207, 207, 13); */
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
-
+/* Movie Details Title Name*/
 .movieData-container div {
     font-size: 1.1rem;
     margin: 5px;
@@ -57,6 +58,7 @@ body {
     font-weight: 800;
 }
 
+/* Movie Details Value*/
 .movieData-container span {
     font-size: 1rem;
     margin: 2px;
@@ -64,6 +66,7 @@ body {
     font-weight: 500;
 }
 
+/* Movie Title */
 #movieTitle {
  font-size: 1.7em; 
  font-weight: 900; 
@@ -71,17 +74,29 @@ body {
  margin: 15px auto;
 }
 
+/* Movie Ratings */
+.rating-imdb{
+    display: flex;
+    align-items: center;
+}
+.rating{
+    max-width: 20px;
+}
+
+/* Handling style for smaller screens */
 @media screen and (max-width: 750px) {
-    /* .container {
-      background-color: lightgreen;
-    } */
     .movieCard {
         flex-direction: column;
+        margin: auto 15px;
+    }
+
+    .movieCard:hover {
+        scale: 100%;
     }
 
     #movieImage-container {
         width: 100%;
-        height: 250px;
+        height: 300px;
     }
     .movieData-container {
         width: 100%;
